--- a/src/components/DayAverage.module.css
+++ b/src/components/DayAverage.module.css
@@ -24,3 +24,45 @@
 .icon {
   font-size: var(--medium);
 }
+
+.min,
+.max,
+.wind,
+.humidity {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .card {
+    flex-direction: row;
+    justify-content: space-around;
+    border-radius: 0;
+    border: 0;
+    border-bottom: 1px solid black;
+  }
+
+  .container:first-child {
+    border-top: 1px solid black;
+  }
+
+  .minmax {
+    display: none;
+  }
+
+  .min,
+  .max,
+  .wind,
+  .humidity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  label {
+    font-size: var(--tiny);
+  }
+}
