--- a/src/components/FiveDays.module.css
+++ b/src/components/FiveDays.module.css
@@ -4,3 +4,9 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+@media screen and (min-width: 1024px) {
+  .container {
+    flex-direction: column;
+  }
+}
