--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,10 @@ body {
 }
 
 .search-input {
+  margin: 1rem 0;
+  height: 2rem;
+  width: calc(100% - 2rem);
+  border-radius: 4px;
+  border: 1px solid black;
+  padding: 0.25rem;
 }
