adds basic lazy styles

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,28 @@
   --small: 1.2rem;
   --medium: 2rem;
   --large: 3rem;
+
+  /* Colors */
+  --white: #ffffff;
+  --light-gray: #c5c5c5;
+  --border-gray: hsla(0, 0%, 97%, 0.815);
 }
 
 body {
   margin: 0 1rem;
+  background: #aa4b6b; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #3b8d99,
+    #6b6b83,
+    #aa4b6b
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #3b8d99,
+    #6b6b83,
+    #aa4b6b
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 * {
