--- a/src/components/FiveDays.module.css
+++ b/src/components/FiveDays.module.css
@@ -5,6 +5,10 @@
   justify-content: space-between;
 }
 
+h3 {
+  color: var(--white);
+}
+
 @media screen and (min-width: 1024px) {
   .container {
     flex-direction: column;
