--- a/src/components/Today.module.css
+++ b/src/components/Today.module.css
@@ -9,6 +9,7 @@
 
 .location h2 {
   margin-bottom: 6px;
+  color: var(--white);
 }
 
 .location h3 {
@@ -27,12 +28,14 @@
 
 .icon {
   font-size: 5rem;
+  color: var(--white);
 }
 
 .temperature {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: var(--white);
 }
 
 .temperature h1 {
@@ -52,8 +55,8 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  border-top: 1px solid var(--border-gray);
+  border-bottom: 1px solid var(--border-gray);
   padding: 1.2rem 0;
 }
 
@@ -70,7 +73,7 @@
   .details {
     border-top: none;
     border-bottom: none;
-    border-left: 1px solid black;
+    border-left: 1px solid var(--border-gray);
     padding: 0;
     padding-left: 1.2rem;
     flex: 1;
